# tg-vacancy-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  sample-message.txt
docs/: application-automation-plan.md  application-queue.md  architecture.md  deployment.md  git-workflow.md  gitflow-transition-plan.md  linkedin-autonomous-discovery-plan.md  multi-agent-workflow.md  sources.md  task-workflow.md  vacancy-filtering-policy-plan.md
tests/: test_access_control.py  test_app.py  test_application_buttons.py  test_application_diagnostics.py  test_application_queue.py  test_arbeitnow_application.py  test_bot.py  test_browser_worker.py  test_config.py  test_console.py  test_deployment.py  test_description_localization.py  test_env_setup.py  test_formatting.py  test_freshness.py  test_github_actions.py  test_intake.py  test_linkedin_diagnostics.py  test_linkedin_discovery.py  test_linkedin_posts.py  test_linkedin_search_profile.py  test_parser.py  test_preview.py  test_profile_flow.py  test_profile_service.py  test_publisher.py  test_resume_storage.py  test_runtime_lock.py  test_source_dates.py  test_source_polling.py  test_sources.py  test_storage.py  test_telegram_check.py  test_telegram_origin.py
tg_vacancy_bot/: __init__.py  access_control.py  app.py  application_buttons.py  application_diagnostics.py  application_queue.py  arbeitnow_application.py  bot.py  browser_worker.py  config.py  console.py  deployment.py  description_localization.py  env_setup.py  formatting.py  intake.py  linkedin_diagnostics.py  linkedin_posts.py  (+13 more)
(+30 files in other folders)
